Enabled site analytics

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   <!--//fonts-->
 
-  <!-- <script async defer data-website-id="f9dba062-aece-494d-9b12-a02bf9a448bc" src="https://pizidavi-stats.herokuapp.com/umami.js"></script> -->
+  <script async defer data-website-id="f9dba062-aece-494d-9b12-a02bf9a448bc" src="https://pizidavi-stats.herokuapp.com/umami.js"></script>
 
   <title>Ultimate Verona</title>
 </head>
