--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   <div id="home" class="banner w3l">
     <div id="video-background">
       <div style="width:100%;height:100%;position:absolute;z-index:1;"></div>
-      <video class="umami--play--video-playing umami--pause--video-paused" muted loop autoplay>
+      <video muted loop autoplay>
         <source src="images/background.mp4" type="video/mp4" />
       </video>
       <button class="video-control" title="Play/Pause" style="z-index:2;">
