--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="keywords" content="Ultimate, Frisbee, Verona" />
-  <meta name="description" content="">
+  <meta name="description" content="Ultimate Verona">
 
   <!--css links-->
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-  <link href="css/font-awesome.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
   <link href="css/utilities.min.css" rel="stylesheet" type="text/css" media="all" />
+  <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
   <link href="css/popuo-box.css" rel="stylesheet" type="text/css" media="all" />
   <link href="css/easy-responsive-tabs.css" rel='stylesheet' type='text/css' />
   <link href="css/custom.css" rel="stylesheet" type="text/css" media="all" />
@@ -25,6 +24,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   <!--fonts-->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" rel="stylesheet" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- <script src="https://kit.fontawesome.com/44930ecb0b.js" crossorigin="anonymous"></script> -->
   <!--//fonts-->
 
   <script async defer data-website-id="f9dba062-aece-494d-9b12-a02bf9a448bc" src="https://pizidavi-stats.herokuapp.com/umami.js"></script>
@@ -90,7 +91,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
       <div class="more-button">
         <div class="button">
           <a href="#small-dialog" class="play-icon popup-with-zoom-anim umami--click--watch-video">
-            <span class="glyphicon glyphicon-play-circle video-w3ls" aria-hidden="true"></span>
+            <i class="fa-regular fa-circle-play video-w3ls"></i>
             <span class="video-text"><i>Guarda</i><br>il video</span>
           </a>
         </div>
@@ -108,7 +109,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   <div class="banner-bottom">
     <div class="bnr-btm-grids-agileits">
       <div class="bnr-btm-icon">
-        <i class="fa fa-envelope-o" aria-hidden="true"></i>
+        <i class="fa-solid fa-envelope"></i>
       </div>
       <div class="bnr-btm-info">
         <h3>Scrivici</h3>
@@ -118,7 +119,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     </div>
     <div class="bnr-btm-grids-agileits">
       <div class="bnr-btm-icon">
-        <i class="fa fa-map-marker" aria-hidden="true"></i>
+        <i class="fa-solid fa-location-dot"></i>
       </div>
       <div class="bnr-btm-info">
         <h3>Trovaci</h3>
@@ -133,8 +134,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
       <div class="bnr-btm-info">
         <h3>Seguici</h3>
         <ul class="social-agileinfo">
-          <li><a href="https://www.facebook.com/DiscoverUltimateVerona" class="umami--click--open-facebook" title="Facebook" target="_blank" data-social-facebook><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-          <li><a href="https://www.instagram.com/discover_ultimate_verona" class="umami--click--open-instagram" title="Instagram" target="_blank" data-social-instagram><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.facebook.com/DiscoverUltimateVerona" class="umami--click--open-facebook" title="Facebook" target="_blank" data-social-facebook><i class="fa-brands fa-facebook-f"></i></a></li>
+          <li><a href="https://www.instagram.com/discover_ultimate_verona" class="umami--click--open-instagram" title="Instagram" target="_blank" data-social-instagram><i class="fa-brands fa-instagram"></i></a></li>
         </ul>
       </div>
       <div class="clearfix"> </div>
@@ -152,10 +153,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
       </h2>
       <div id="horizontalTab">
         <ul class="resp-tabs-list">
-          <li><i class="fa fa-thumbs-o-up" aria-hidden="true"></i></li>
-          <li><i class="fa fa-random" aria-hidden="true"></i></li>
-          <li><i class="fa fa-users" aria-hidden="true"></i></li>
-          <li><i class="fa fa-shield" aria-hidden="true"></i></li>
+          <li><i class="fa-solid fa-book-open"></i></li>
+          <li>
+            <svg width="36px" height="36px" viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg" style=" display: block; margin: auto; transform: rotate(-20deg); "><path d="M35 21.526C35 26.758 27.389 31 18 31S1 26.758 1 21.526S7.625 11 18 11s17 5.294 17 10.526z" style=" "></path><ellipse cx="18" cy="19.502" rx="16" ry="8.5"></ellipse><path d="M18 11.331c-6.449 0-11.5 2.491-11.5 5.672c0 3.18 5.051 5.671 11.5 5.671c6.448 0 11.5-2.491 11.5-5.671c0-3.181-5.052-5.672-11.5-5.672z" style=" fill: white; "></path><ellipse cx="18" cy="18.002" rx="12" ry="6"></ellipse><path d="M29 18.002c-1.81 3.118-7 4-11 4s-9.19-.882-11-4c-.75-1.292-1.5 1.083.5 3.083S14 24.402 18 24.402s8.5-1.317 10.5-3.317s1.25-4.374.5-3.083z" style=" fill: white; "></path></svg>
+          </li>
+          <li><i class="fa-solid fa-people-group"></i></i></li>
+          <li><i class="fa-solid fa-shield-halved"></i></li>
         </ul>
         <div class="resp-tabs-container">
           <div class="tab1">
