--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   <meta name="description" content="Ultimate Verona">
 
   <!--css links-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-  <link href="css/utilities.min.css" rel="stylesheet" type="text/css" media="all" />
   <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
   <link href="css/popuo-box.css" rel="stylesheet" type="text/css" media="all" />
   <link href="css/easy-responsive-tabs.css" rel='stylesheet' type='text/css' />
@@ -25,7 +25,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" rel="stylesheet" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!-- <script src="https://kit.fontawesome.com/44930ecb0b.js" crossorigin="anonymous"></script> -->
   <!--//fonts-->
 
   <script async defer data-website-id="f9dba062-aece-494d-9b12-a02bf9a448bc" src="https://pizidavi-stats.herokuapp.com/umami.js"></script>
@@ -46,21 +45,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <i class="fa fa-pause"></i>
       </button>
     </div>
-    <div class="container">
-      <div class="header-nav">
-        <nav class="navbar navbar-default">
-          <!-- navbar-header -->
-          <div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-              <li><a href="" class="umami--click--home-page">Home</a></li>
-              <li><a href="#about" class="umami--click--about-section">About</a></li>
-              <!-- <li><a href="#">Contatti</a></li> -->
-            </ul>
-          </div>
-          <div class="clearfix"></div>
-        </nav>
-        <div class="clearfix"></div>
-      </div>
+    <div class="container pt-4">
       <div class="banner-info wow bounceInDown" data-wow-duration="2s" data-wow-delay="0s">
         <div class="callbacks_container">
           <ul class="rslides" id="slider3">
@@ -155,15 +140,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <ul class="resp-tabs-list">
           <li><i class="fa-solid fa-book-open"></i></li>
           <li>
-            <svg width="36px" height="36px" viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg" style=" display: block; margin: auto; transform: rotate(-20deg); "><path d="M35 21.526C35 26.758 27.389 31 18 31S1 26.758 1 21.526S7.625 11 18 11s17 5.294 17 10.526z" style=" "></path><ellipse cx="18" cy="19.502" rx="16" ry="8.5"></ellipse><path d="M18 11.331c-6.449 0-11.5 2.491-11.5 5.672c0 3.18 5.051 5.671 11.5 5.671c6.448 0 11.5-2.491 11.5-5.671c0-3.181-5.052-5.672-11.5-5.672z" style=" fill: white; "></path><ellipse cx="18" cy="18.002" rx="12" ry="6"></ellipse><path d="M29 18.002c-1.81 3.118-7 4-11 4s-9.19-.882-11-4c-.75-1.292-1.5 1.083.5 3.083S14 24.402 18 24.402s8.5-1.317 10.5-3.317s1.25-4.374.5-3.083z" style=" fill: white; "></path></svg>
+            <svg width="36px" height="36px" viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg" class="d-block mx-auto" style="transform: rotate(-20deg); "><path d="M35 21.526C35 26.758 27.389 31 18 31S1 26.758 1 21.526S7.625 11 18 11s17 5.294 17 10.526z"></path><ellipse cx="18" cy="19.502" rx="16" ry="8.5"></ellipse><path d="M18 11.331c-6.449 0-11.5 2.491-11.5 5.672c0 3.18 5.051 5.671 11.5 5.671c6.448 0 11.5-2.491 11.5-5.671c0-3.181-5.052-5.672-11.5-5.672z" style="fill:white;"></path><ellipse cx="18" cy="18.002" rx="12" ry="6"></ellipse><path d="M29 18.002c-1.81 3.118-7 4-11 4s-9.19-.882-11-4c-.75-1.292-1.5 1.083.5 3.083S14 24.402 18 24.402s8.5-1.317 10.5-3.317s1.25-4.374.5-3.083z" style="fill:white;"></path></svg>
           </li>
           <li><i class="fa-solid fa-people-group"></i></i></li>
-          <li><i class="fa-solid fa-shield-halved"></i></li>
         </ul>
         <div class="resp-tabs-container">
-          <div class="tab1">
-            <div class="col-md-6 services-img-w3-agile" style="background-image: url(images/what_is_ultimate.jpg);"></div>
-            <div class="col-md-6 services-right-agileits">
+          <div class="row tab1">
+            <div class="col-sm-12 col-md-6 services-img-w3-agile" style="background-image: url(images/what_is_ultimate.jpg);"></div>
+            <div class="col-sm-12 col-md-6 services-right-agileits">
               <h4>Che cos'è l' Ultimate</h4>
               <p class="para-agileits-w3layouts">
                 L'Ultimate è uno sport che seduce rapidamente per la sua semplicitá, l'immediatezza 
@@ -175,8 +159,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             </div>
           </div>
 
-          <div class="tab2">
-            <div class="col-md-6 services-right-agileits img-top">
+          <div class="row tab2">
+            <div class="col-sm-12 col-md-6 services-right-agileits img-top">
               <h4>Come si gioca</h4>
               <p class="para-agileits-w3layouts">
                 Due squadre, sette contro sette, 80 minuti.<br>
@@ -187,7 +171,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
               </p>
               <a class="read-agileits umami--click--how-play-read-more" href="https://www.fifd.it/pages/ultimate-come-si-gioca" target="_blank">Read More</a>
             </div>
-            <div class="col-md-6">
+            <div class="col-sm-12 col-md-6">
               <div class="d-none d-lg-block mt-5"></div>
               <div class="responsive-iframe-container">
                 <iframe class="responsive-iframe" src="https://www.youtube.com/embed/zEKnqFBajiI" title="How To Play Ultimate Frisbee" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -196,9 +180,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             </div>
           </div>
 
-          <div class="tab3">
-            <div class="col-md-6 services-img-w3-agile" style="background-image: url(images/our_team.jpg);"></div>
-            <div class="col-md-6 services-right-agileits bar-grids bargrids-left">
+          <div class="row tab3">
+            <div class="col-sm-12 col-md-6 services-img-w3-agile" style="background-image: url(images/our_team.jpg);"></div>
+            <div class="col-sm-12 col-md-6 services-right-agileits bar-grids bargrids-left">
               <h4>Le nostre abilità</h4>
               <h6>Simpatia <span>90%</span></h6>
               <div class="progress">
@@ -214,22 +198,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
               </div>
             </div>
           </div>
-
-          <div class="tab4">
-            <div class="col-md-6 services-img-w3-agile" style="background-image: url(images/logo_cus.png); background-size: 60%;"></div>
-            <div class="col-md-6 services-right-agileits">
-              <h4>CUS Verona</h4>
-              <p class="para-agileits-w3layouts">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis suscipit
-                et dui ut cursus. Ut tortor nisi, congue quis orci at, posuere mattis est. Nunc sollicitudin nisi lorem,
-                eget aliquet leo scelerisque eu.
-              </p>
-              <a class="read-agileits umami--click--cus-verona" href="https://www.cusverona.it/" target="_blank">Read More</a>
-            </div>
-          </div>
-
         </div>
       </div>
-
     </div>
   </div>
   <!-- //about -->
@@ -241,31 +211,30 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         Join us
         <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M385.5 30.38c-18.5.16-40.5 5.02-64.3 14.24C270.4 64.35 211.1 104 156.4 158.7c-54.8 54.7-94.46 114.1-114.12 164.9-9.89 25.4-14.7 48.6-14.28 67.9.43 19 5.8 33.8 16.05 44 10.26 10.3 24.96 15.6 44.06 16.1 19.19.4 42.39-4.4 67.89-14.3 50.8-19.7 110.1-59.4 164.8-114.1 54.7-54.7 94.4-114 114.1-164.9 9.9-25.4 14.7-48.6 14.3-67.79-.5-19.09-5.8-33.8-16.1-44.05-10.3-10.26-25-15.63-44-16.05-1.2-.03-2.4-.04-3.6-.03zm66.6 10.7c9.9 13.36 14.7 30.3 15.1 49.08.5 22.44-5 47.74-15.6 74.64-20.8 54-61.8 114.9-118 171.1-56.3 56.3-117.2 97.2-171.2 118.1-26.9 10.6-52.2 16-74.65 15.6-15.06-.3-28.93-3.5-40.72-9.8.8.9 1.62 1.8 2.47 2.6 25.95 26 72.3 29.4 128.3 10.7 56-18.6 120.3-59.2 178.2-117.2 57.9-57.9 98.5-122.1 117.1-178.1 18.8-56 15.3-102.35-10.7-128.3-3.1-3.14-6.6-5.94-10.3-8.42zM299.7 122.5c7.8 0 15.3 2.3 20.7 7.7 6.7 6.7 8.5 16.4 7.4 26.1-1 9.7-4.7 20.2-10.3 31.6-11.2 22.8-30.4 49-55.5 74.1-25.1 25.1-51.3 44.3-74.1 55.5-11.3 5.6-21.9 9.3-31.6 10.3-9.7 1.1-19.4-.7-26.1-7.4-6.7-6.7-8.5-16.4-7.4-26.1 1-9.7 4.7-20.3 10.3-31.7 11.2-22.8 30.4-48.9 55.5-74s51.3-44.4 74.1-55.6c11.4-5.6 21.9-9.2 31.6-10.2 1.8-.2 3.6-.3 5.4-.3z"/></svg>
       </h3>
-      <div class="col-md-4 col-md-offset-2 about-w3-grids" data-when>
-        <div class="trust-icon-w3ls">
-          <i class="fa fa-user" aria-hidden="true"></i>
+      <div class="row justify-content-center">
+        <div class="col-sm-12 col-md-6 col-lg-4 about-w3-grids" data-when>
+          <div class="trust-icon-w3ls">
+            <i class="fa fa-user" aria-hidden="true"></i>
+          </div>
+          <h4 class="mt-2" data-weekday>Lunedì</h4>
+          <p class="para-agileits-w3layouts" style="text-align:center; line-height: 25px;" data-time>
+            Dalle <b>19.30</b> alle <b>21.30</b> <br>
+            <a href="https://goo.gl/maps/UsZZHLuT4jB57wjt5" class="umami--click--open-maps" target="_blank" style="color:inherit;" data-where>Parco San Giacomo, Verona</a>
+          </p>
+          <small class="d-block mt-3">L'allenamento di prova è <b>GRATIS</b></small>
         </div>
-        <h4 class="mt-2" data-weekday>Lunedì</h4>
-        <p class="para-agileits-w3layouts" style="text-align:center; line-height: 25px;" data-time>
-          Dalle <b>19.30</b> alle <b>21.30</b> <br> 
-          <a href="https://goo.gl/maps/UsZZHLuT4jB57wjt5" class="umami--click--open-maps" target="_blank" style="color:inherit;" data-where>Parco San Giacomo, Verona</a>
-        </p>
-        <small class="d-block mt-3">L'allenamento di prova è <b>GRATIS</b></small>
-        <!-- <a class="read-agileits" href="about.html">Read More</a> -->
-      </div>
-      <div class="col-md-4 about-w3-grids" data-when>
-        <div class="trust-icon-w3ls">
-          <i class="fa fa-user" aria-hidden="true"></i>
+        <div class="col-sm-12 col-md-6 col-lg-4 about-w3-grids" data-when>
+          <div class="trust-icon-w3ls">
+            <i class="fa fa-user" aria-hidden="true"></i>
+          </div>
+          <h4 class="mt-2" data-weekday>Giovedì</h4>
+          <p class="para-agileits-w3layouts" style="text-align:center; line-height: 25px;" data-time>
+            Dalle <b>19.30</b> alle <b>21.30</b> <br>
+            <a href="https://goo.gl/maps/UsZZHLuT4jB57wjt5" class="umami--click--open-maps" target="_blank" style="color:inherit;" data-where>Parco San Giacomo, Verona</a>
+          </p>
+          <small class="d-block mt-3">L'allenamento di prova è <b>GRATIS</b></small>
         </div>
-        <h4 class="mt-2" data-weekday>Giovedì</h4>
-        <p class="para-agileits-w3layouts" style="text-align:center; line-height: 25px;" data-time>
-          Dalle <b>19.30</b> alle <b>21.30</b> <br> 
-          <a href="https://goo.gl/maps/UsZZHLuT4jB57wjt5" class="umami--click--open-maps" target="_blank" style="color:inherit;" data-where>Parco San Giacomo, Verona</a>
-        </p>
-        <small class="d-block mt-3">L'allenamento di prova è <b>GRATIS</b></small>
-        <!-- <a class="read-agileits" href="about.html">Read More</a> -->
       </div>
-      <div class="clearfix"></div>
     </div>
   </div>
   <!-- //join-us -->
