--- a/index.html
+++ b/index.html
@@ -10,43 +10,44 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-  <meta name="keywords" content="Ultimate, Frisbee, Verona" />
+  <!--meta data-->
+  <title>Ultimate Verona - Discover</title>
   <meta name="description" content="Uno sport di squadra emozionante e senza contatto, giocato da migliaia di persone in tutto il mondo in squadre Open, Mixed e Women.">
+  <meta name="keywords" content="Ultimate, Frisbee, Verona, Discover, sport, disco, allenamento, prova gratis" />
 
-  <meta property="og:url" content="https://www.ultimateverona.it" />
-  <meta property="og:title" content="Ultimate Verona" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ultimateverona.it" />
+  <meta property="og:title" content="Ultimate Verona - Discover" />
   <meta property="og:description" content="Uno sport di squadra emozionante e senza contatto, giocato da migliaia di persone in tutto il mondo in squadre Open, Mixed e Women."/>
-  <meta property="og:image" content="https://www.ultimateverona.it/images/logo_landscape.webp" />
-  <meta property="og:image:secure_url" content="https://www.ultimateverona.it/images/logo_landscape.webp" />
-  <meta property="og:image:type" content="image/png" />
+  <meta property="og:site_name" content="Ultimate Verona" />
+  <meta property="og:locale" content="it_IT" />
+  <meta property="og:image" content="https://ultimateverona.it/images/logo_landscape.webp" />
+  <meta property="og:image:secure_url" content="https://ultimateverona.it/images/logo_landscape.webp" />
+  <meta property="og:image:type" content="image/webp" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="627" />
   <meta property="og:image:alt" content="Landscape logo Discover" />
-  <meta property="og:type" content="website" />
 
   <meta name="twitter:card" content="summary_large_image" />
-
-  <title>Ultimate Verona</title>
+  <!--//meta data-->
 
   <!--css links-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.4/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
+  <link href="css/bootstrap.slim.min.css" rel="stylesheet" type="text/css" media="all" />
   <link href="css/style.min.css" rel="stylesheet" type="text/css" media="all" />
   <link href="css/popuo-box.min.css" rel="stylesheet" type="text/css" media="all" />
   <link href="css/easy-responsive-tabs.min.css" rel="stylesheet" type="text/css"  media="all" />
-  <link href="css/custom.min.css" rel="stylesheet" type="text/css" media="all" />
   <!--//css links-->
 
   <!--fonts-->
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" rel="stylesheet" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!--//fonts-->
 
   <!--favicon-->
-  <link href="images/favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180" />
-  <link href="images/favicon/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32" />
-  <link href="images/favicon/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16" />
-  <link href="images/favicon/site.webmanifest" rel="manifest" />
+  <link href="favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180" />
+  <link href="favicon/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32" />
+  <link href="favicon/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16" />
+  <link href="favicon/site.webmanifest" rel="manifest" />
   <!--//favicon-->
 
   <!--schema-->
@@ -54,8 +55,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   {
     "@context": "https://schema.org",
     "@type": "Organization",
-    "url": "https://www.ultimateverona.it",
-    "logo": "https://www.ultimateverona.it/images/logo.webp"
+    "url": "https://ultimateverona.it",
+    "logo": "https://ultimateverona.it/images/logo.webp"
   }
   </script>
   <!--//schema-->
@@ -67,7 +68,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
   <!-- Header -->
   <div id="home" class="banner w3l">
-    <div id="video-background">
+    <div class="video-background">
       <div class="video-hider"></div>
       <video muted loop autoplay>
         <source src="images/background.mp4" type="video/mp4" />
@@ -77,27 +78,27 @@ License URL: http://creativecommons.org/licenses/by/3.0/
       </button>
     </div>
     <div class="container pt-4">
-      <div class="banner-info wow bounceInDown" data-wow-duration="10s" data-wow-delay="0s">
+      <div class="banner-info wow bounceInDown" data-wow-duration="30s" data-wow-delay="0s">
         <div class="callbacks_container">
           <ul class="rslides" id="slider3">
             <li>
               <div class="banner-text">
-                <h6>CUS Verona Ultimate</h6>
-                <h1><span style="color:var(--blue);">D</span><span style="color:var(--yellow);">iscover</span></h1>
+                <span class="subtitle">CUS Verona Ultimate</span>
+                <h1><span style="color:var(--blue);">D</span>iscover</h1>
                 <p>Who gets more air than a basketball player, more floor than a rugby player and pulls at every tournament?<br>That’s an <b>Ultimate Player</b></p>
               </div>
             </li>
             <li>
               <div class="banner-text">
-                <h6>CUS Verona Ultimate</h6>
-                <h1><span style="color:var(--blue)">D</span><span style="color:var(--yellow);">iscover</span></h1>
+                <span class="subtitle">CUS Verona Ultimate</span>
+                <h1><span style="color:var(--blue);">D</span>iscover</h1>
                 <p>"..L'Ultimate combina velocità, grazia e potenti scatti con un ritmo estenuante."<br><small>The Wall Street Journal</small></p>
               </div>
             </li>
             <li>
               <div class="banner-text">
-                <h6>CUS Verona Ultimate</h6>
-                <h1><span style="color:var(--blue)">D</span><span style="color:var(--yellow);">iscover</span></h1>
+                <span class="subtitle">CUS Verona Ultimate</span>
+                <h1><span style="color:var(--blue);">D</span>iscover</h1>
                 <p>Lo sport dà il meglio di sé quando ci unisce.</p>
               </div>
             </li>
@@ -235,10 +236,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   <!-- Join Us -->
   <div id="join-us" class="reasons-agileits-w3layouts" style="background-image:url(images/bottom_background.webp);">
     <div class="container">
-      <h3 class="heading-agileinfo white-w3ls">
+      <h2 class="heading-agileinfo white">
         Join us
         <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M385.5 30.38c-18.5.16-40.5 5.02-64.3 14.24C270.4 64.35 211.1 104 156.4 158.7c-54.8 54.7-94.46 114.1-114.12 164.9-9.89 25.4-14.7 48.6-14.28 67.9.43 19 5.8 33.8 16.05 44 10.26 10.3 24.96 15.6 44.06 16.1 19.19.4 42.39-4.4 67.89-14.3 50.8-19.7 110.1-59.4 164.8-114.1 54.7-54.7 94.4-114 114.1-164.9 9.9-25.4 14.7-48.6 14.3-67.79-.5-19.09-5.8-33.8-16.1-44.05-10.3-10.26-25-15.63-44-16.05-1.2-.03-2.4-.04-3.6-.03zm66.6 10.7c9.9 13.36 14.7 30.3 15.1 49.08.5 22.44-5 47.74-15.6 74.64-20.8 54-61.8 114.9-118 171.1-56.3 56.3-117.2 97.2-171.2 118.1-26.9 10.6-52.2 16-74.65 15.6-15.06-.3-28.93-3.5-40.72-9.8.8.9 1.62 1.8 2.47 2.6 25.95 26 72.3 29.4 128.3 10.7 56-18.6 120.3-59.2 178.2-117.2 57.9-57.9 98.5-122.1 117.1-178.1 18.8-56 15.3-102.35-10.7-128.3-3.1-3.14-6.6-5.94-10.3-8.42zM299.7 122.5c7.8 0 15.3 2.3 20.7 7.7 6.7 6.7 8.5 16.4 7.4 26.1-1 9.7-4.7 20.2-10.3 31.6-11.2 22.8-30.4 49-55.5 74.1-25.1 25.1-51.3 44.3-74.1 55.5-11.3 5.6-21.9 9.3-31.6 10.3-9.7 1.1-19.4-.7-26.1-7.4-6.7-6.7-8.5-16.4-7.4-26.1 1-9.7 4.7-20.3 10.3-31.7 11.2-22.8 30.4-48.9 55.5-74s51.3-44.4 74.1-55.6c11.4-5.6 21.9-9.2 31.6-10.2 1.8-.2 3.6-.3 5.4-.3z"/></svg>
-      </h3>
+      </h2>
       <div class="row justify-content-center">
         <div class="col-sm-12 col-md-6 col-lg-4 about-w3-grids" data-when>
           <div class="trust-icon-w3ls">
@@ -274,7 +275,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <p>© <span id="year">2022</span> Discover Ultimate Verona</p>
       </div>
       <div class="agileinfo_copyright p-0">
-        <p>© 2017 Plunge. All Rights Reserved | Design by <a href="https://w3layouts.com/" target="_blank" rel="noopener" class="umami--click--open-W3layouts">W3layouts</a></p>
+        <p>© 2017 Plunge. All Rights Reserved | Design by <a href="https://w3layouts.com/" target="_blank" rel="noopener noreferrer nofollow" class="umami--click--open-W3layouts">W3layouts</a></p>
       </div>
     </div>
   </div>
