--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   <title>Ultimate Verona - Discover</title>
   <meta name="description" content="Uno sport di squadra emozionante e senza contatto, giocato da migliaia di persone in tutto il mondo in squadre Open, Mixed e Women.">
   <meta name="keywords" content="Ultimate, Frisbee, Verona, Discover, sport, disco, allenamento, prova gratis" />
+  <meta name="theme-color" content="#ffffff">
 
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://ultimateverona.it" />
@@ -44,10 +45,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   <!--//fonts-->
 
   <!--favicon-->
-  <link href="favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180" />
-  <link href="favicon/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32" />
-  <link href="favicon/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16" />
-  <link href="favicon/site.webmanifest" rel="manifest" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+  <link rel="icon" type="image/x-icon" sizes="48x48" href="/favicon.ico">
+  <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#3264d8">
+  <link rel="manifest" href="/favicon/site.webmanifest">
   <!--//favicon-->
 
   <!--schema-->
