--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
       </div>
       <div class="bnr-btm-info">
         <h3>Trovaci</h3>
-        <p><a href="https://goo.gl/maps/UsZZHLuT4jB57wjt5" title="Google Maps" class="umami--click--open-maps" target="_blank" rel="noopener" data-where>Parco San Giacomo, Verona</a></p>
+        <p><a href="https://goo.gl/maps/yFJq3i7R1nDyJrof7" title="Google Maps" class="umami--click--open-maps" target="_blank" rel="noopener" data-where>Via Montorio 114, Verona</a></p>
       </div>
     </div>
     <div class="bnr-btm-grids-agileits">
@@ -251,7 +251,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
           <h4 class="mt-2" data-weekday>Lunedì</h4>
           <p class="para-agileits-w3layouts" data-time>
             Dalle <b>19.30</b> alle <b>21.30</b> <br>
-            <a href="https://goo.gl/maps/UsZZHLuT4jB57wjt5" title="Google Maps" class="umami--click--open-maps" target="_blank" rel="noopener" data-where>Parco San Giacomo, Verona</a>
+            <a href="https://goo.gl/maps/yFJq3i7R1nDyJrof7" title="Google Maps" class="umami--click--open-maps" target="_blank" rel="noopener" data-where>Via Montorio 114, Verona</a>
           </p>
           <small class="d-block mt-3">L'allenamento di prova è <b>GRATIS</b></small>
         </div>
@@ -262,7 +262,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
           <h4 class="mt-2" data-weekday>Giovedì</h4>
           <p class="para-agileits-w3layouts" data-time>
             Dalle <b>19.30</b> alle <b>21.30</b> <br>
-            <a href="https://goo.gl/maps/UsZZHLuT4jB57wjt5" title="Google Maps" class="umami--click--open-maps" target="_blank" rel="noopener" data-where>Parco San Giacomo, Verona</a>
+            <a href="https://goo.gl/maps/yFJq3i7R1nDyJrof7" title="Google Maps" class="umami--click--open-maps" target="_blank" rel="noopener" data-where>Via Montorio 114, Verona</a>
           </p>
           <small class="d-block mt-3">L'allenamento di prova è <b>GRATIS</b></small>
         </div>
