--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <h3>Seguici</h3>
         <ul class="social-agileinfo">
           <li><a href="https://www.facebook.com/DiscoverUltimateVerona" title="Facebook" class="umami--click--open-facebook" title="Facebook" target="_blank" rel="noopener" data-social-facebook><i class="fa-brands fa-facebook-f"></i></a></li>
-          <li><a href="https://www.instagram.com/discover_ultimate_verona" title="Instagram" class="umami--click--open-instagram" title="Instagram" target="_blank" rel="noopener" data-social-instagram><i class="fa-brands fa-instagram"></i></a></li>
+          <li><a href="https://www.instagram.com/discover.ultimate.verona" title="Instagram" class="umami--click--open-instagram" title="Instagram" target="_blank" rel="noopener" data-social-instagram><i class="fa-brands fa-instagram"></i></a></li>
         </ul>
       </div>
     </div>
