--- a/index.html
+++ b/index.html
@@ -58,8 +58,42 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   {
     "@context": "https://schema.org",
     "@type": "Organization",
+    "name": "Organization",
     "url": "https://ultimateverona.it",
     "logo": "https://ultimateverona.it/images/logo.webp"
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "name": "FAQ",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Che cos'è l'Ultimate?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "L'Ultimate è uno sport che seduce rapidamente per la sua semplicitá, l'immediatezza e la spettacolaritá di gioco. Per praticarlo è sufficiente un disco da 175 grammi, due squadre e un campo. L'Ultimate è uno sport di squadra completo, dai tratti agonistici e tecnici simili ad altri sport, che non prevede il contatto fisico e dai risvolti educativi eccezionali."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Quando e dove vi allenate?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Ci allenamiamo il <b>Lunedì</b> e <b>Giovedì</b> dalle <b>19:30</b> alle <b>21:30</b> in <a href=https://goo.gl/maps/yFJq3i7R1nDyJrof7>Via Montorio 114, Verona</a>"
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Posso venire a provare anche io?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "<b>Ovviamente!</b> Mandaci una email o scrivici su <a href=https://www.facebook.com/DiscoverUltimateVerona>Facebook</a> e <a href=https://www.instagram.com/discover.ultimate.verona>Instagram</a> per farcelo sapere"
+        }
+      }
+    ]
   }
   </script>
   <!--//schema-->
@@ -235,6 +269,31 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     </div>
   </div>
   <!-- //about -->
+
+  <!-- Events -->
+  <section class="events pt-0">
+    <div class="container">
+      <h2 class="heading-agileinfo">
+        Events
+        <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+          <path d="M385.5 30.38c-18.5.16-40.5 5.02-64.3 14.24C270.4 64.35 211.1 104 156.4 158.7c-54.8 54.7-94.46 114.1-114.12 164.9-9.89 25.4-14.7 48.6-14.28 67.9.43 19 5.8 33.8 16.05 44 10.26 10.3 24.96 15.6 44.06 16.1 19.19.4 42.39-4.4 67.89-14.3 50.8-19.7 110.1-59.4 164.8-114.1 54.7-54.7 94.4-114 114.1-164.9 9.9-25.4 14.7-48.6 14.3-67.79-.5-19.09-5.8-33.8-16.1-44.05-10.3-10.26-25-15.63-44-16.05-1.2-.03-2.4-.04-3.6-.03zm66.6 10.7c9.9 13.36 14.7 30.3 15.1 49.08.5 22.44-5 47.74-15.6 74.64-20.8 54-61.8 114.9-118 171.1-56.3 56.3-117.2 97.2-171.2 118.1-26.9 10.6-52.2 16-74.65 15.6-15.06-.3-28.93-3.5-40.72-9.8.8.9 1.62 1.8 2.47 2.6 25.95 26 72.3 29.4 128.3 10.7 56-18.6 120.3-59.2 178.2-117.2 57.9-57.9 98.5-122.1 117.1-178.1 18.8-56 15.3-102.35-10.7-128.3-3.1-3.14-6.6-5.94-10.3-8.42zM299.7 122.5c7.8 0 15.3 2.3 20.7 7.7 6.7 6.7 8.5 16.4 7.4 26.1-1 9.7-4.7 20.2-10.3 31.6-11.2 22.8-30.4 49-55.5 74.1-25.1 25.1-51.3 44.3-74.1 55.5-11.3 5.6-21.9 9.3-31.6 10.3-9.7 1.1-19.4-.7-26.1-7.4-6.7-6.7-8.5-16.4-7.4-26.1 1-9.7 4.7-20.3 10.3-31.7 11.2-22.8 30.4-48.9 55.5-74s51.3-44.4 74.1-55.6c11.4-5.6 21.9-9.2 31.6-10.2 1.8-.2 3.6-.3 5.4-.3z"/>
+        </svg>
+      </h2>
+      <div class="row justify-content-center">
+        <div class="col-sm-6 col-md-6 col-lg-4">
+          <div class="latest-item large-item m-auto">
+            <img src="images/volantino-2022-fronte.webp" class="img-fluid mh-100" alt="volantino-2022-fronte">
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-4">
+          <div class="latest-item large-item m-auto">
+            <img src="images/volantino-2022-retro.webp" class="img-fluid mh-100" alt="volantino-2022-retro">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- //events -->
 
   <!-- Join Us -->
   <div id="join-us" class="reasons-agileits-w3layouts" style="background-image:url(images/bottom_background.webp);">
