--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
       </div>
       <div class="more-button">
         <div class="button">
-          <a href="#small-dialog" class="play-icon popup-with-zoom-anim umami--click--watch-video">
+          <a href="#small-dialog"
+            class="play-icon popup-with-zoom-anim umami--click--watch-video"
+          >
             <i class="fa-regular fa-circle-play video-w3ls"></i>
             <span class="video-text"><i>Guarda</i><br>il video</span>
           </a>
@@ -167,7 +169,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
       </div>
       <div class="bnr-btm-info">
         <h3>Scrivici</h3>
-        <p><a href="mailto:discover.cusverona@gmail.com" class="umami--click--open-email" data-contact-email>discover.cusverona@gmail.com</a></p>
+        <p>
+          <a href="mailto:discover.cusverona@gmail.com"
+            class="umami--click--open-email" data-contact-email
+          >discover.cusverona@gmail.com</a>
+        </p>
       </div>
     </div>
     <div class="bnr-btm-grids-agileits">
@@ -176,7 +182,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
       </div>
       <div class="bnr-btm-info">
         <h3>Trovaci</h3>
-        <p><a href="https://goo.gl/maps/yFJq3i7R1nDyJrof7" title="Google Maps" class="umami--click--open-maps" target="_blank" rel="noopener" data-where>Via Montorio 114, Verona</a></p>
+        <p>
+          <a href="https://goo.gl/maps/yFJq3i7R1nDyJrof7"
+            class="umami--click--open-maps"
+            title="Google Maps" target="_blank" rel="noopener" data-where
+          >Via Montorio 114, Verona</a>
+        </p>
       </div>
     </div>
     <div class="bnr-btm-grids-agileits">
@@ -186,8 +197,20 @@ License URL: http://creativecommons.org/licenses/by/3.0/
       <div class="bnr-btm-info">
         <h3>Seguici</h3>
         <ul class="social-agileinfo">
-          <li><a href="https://www.facebook.com/DiscoverUltimateVerona" title="Facebook" class="umami--click--open-facebook" title="Facebook" target="_blank" rel="noopener" data-social-facebook><i class="fa-brands fa-facebook-f"></i></a></li>
-          <li><a href="https://www.instagram.com/discover.ultimate.verona" title="Instagram" class="umami--click--open-instagram" title="Instagram" target="_blank" rel="noopener" data-social-instagram><i class="fa-brands fa-instagram"></i></a></li>
+          <li>
+            <a href="https://www.facebook.com/DiscoverUltimateVerona"
+              class="umami--click--open-facebook"
+              title="Facebook" target="_blank" rel="noopener" data-social-facebook
+            ><i class="fa-brands fa-facebook-f"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/discover.ultimate.verona"
+              class="umami--click--open-instagram"
+              title="Instagram" target="_blank" rel="noopener" data-social-instagram
+            ><i class="fa-brands fa-instagram"></i>
+            </a>
+          </li>
         </ul>
       </div>
     </div>
@@ -205,9 +228,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
       <div id="horizontalTab">
         <ul class="resp-tabs-list">
           <li><i class="fa-solid fa-book-open"></i></li>
-          <li>
-            <svg width="36px" height="36px" viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg" class="d-block mx-auto" style="transform:rotate(-20deg);"><path d="M35 21.526C35 26.758 27.389 31 18 31S1 26.758 1 21.526S7.625 11 18 11s17 5.294 17 10.526z"></path><ellipse cx="18" cy="19.502" rx="16" ry="8.5"></ellipse><path d="M18 11.331c-6.449 0-11.5 2.491-11.5 5.672c0 3.18 5.051 5.671 11.5 5.671c6.448 0 11.5-2.491 11.5-5.671c0-3.181-5.052-5.672-11.5-5.672z" style="fill:white;"></path><ellipse cx="18" cy="18.002" rx="12" ry="6"></ellipse><path d="M29 18.002c-1.81 3.118-7 4-11 4s-9.19-.882-11-4c-.75-1.292-1.5 1.083.5 3.083S14 24.402 18 24.402s8.5-1.317 10.5-3.317s1.25-4.374.5-3.083z" style="fill:white;"></path></svg>
-          </li>
+          <li><img src="images/disc.svg" style="transform:rotate(-20deg);" /></li>
           <li><i class="fa-solid fa-people-group"></i></li>
         </ul>
         <div class="resp-tabs-container">
@@ -221,7 +242,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 e un campo. L'Ultimate è uno sport di squadra completo, dai tratti agonistici e tecnici 
                 simili ad altri sport, che non prevede il contatto fisico e dai risvolti educativi eccezionali.
               </p>
-              <a class="read-agileits umami--click--read-more-tab0" href="https://www.fifd.it/pages/ultimate-cos-e" target="_blank" rel="noopener">Read More</a>
+              <a href="https://www.fifd.it/pages/ultimate-cos-e"
+                class="read-agileits umami--click--read-more-tab0" target="_blank" rel="noopener"
+                >Read More</a>
             </div>
           </div>
 
@@ -235,7 +258,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 Se l'attacco perde il possesso del disco, cambiano i ruoli di attacco e difesa.
                 Chi è in possesso del disco non può correre.
               </p>
-              <a class="read-agileits umami--click--read-more-tab1" href="https://www.fifd.it/pages/ultimate-come-si-gioca" target="_blank" rel="noopener">Read More</a>
+              <a href="https://www.fifd.it/pages/ultimate-come-si-gioca"
+                class="read-agileits umami--click--read-more-tab1" target="_blank" rel="noopener"
+                >Read More</a>
             </div>
             <div class="col-sm-12 col-md-6">
               <div class="d-none d-lg-block mt-5"></div>
@@ -291,6 +316,43 @@ License URL: http://creativecommons.org/licenses/by/3.0/
           </div>
         </div>
       </div>
+      <div id="countdown" class="row justify-content-center mt-5 hidden">
+        <div class="col-sm-12 col-md-8 col-lg-6">
+          <ul class="countdown">
+            <li><span data-countdown-text="days">0</span>Giorni</li>
+            <li><span data-countdown-text="hours">0</span>Ore</li>
+            <li><span data-countdown-text="minutes">0</span>Minuti</li>
+            <li><span data-countdown-text="seconds">0</span>Secondi</li>
+          </ul>
+        </div>
+      </div>
+      <div class="row justify-content-center mt-5">
+        <div class="col-sm-6 col-md-6 col-lg-4 d-flex justify-content-center">
+          <div class="share-btn">
+            <span class="text">Share</span>
+            <span class="icon">
+              <i class="fa-solid fa-share"></i>
+            </span>
+            <div class="sm-btns">
+              <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fultimateverona.it"
+                class="umami--click--share-facebook"
+                title="Condividi su Facebook" target="_blank" rel="noopener"
+              ><i class="fab fa-facebook"></i>
+              </a>
+              <a href="https://twitter.com/intent/tweet?text=Open%20Day%20il%2026%20settembre%20e%206%20ottobre%20dalle%2019:30%20alle%2021:30%20in%20Via%20Montorio%20112.%20Andiamo?&url=https%3A%2F%2Fultimateverona.it&hashtags=ultimate,verona,frisbee,sport"
+                class="umami--click--share-twitter"
+                title="Condividi su Twitter" target="_blank" rel="noopener"
+              ><i class="fab fa-twitter"></i>
+              </a>
+              <a href="https://api.whatsapp.com/send?text=https://ultimateverona.it%0AOpen%20Day%20il%2026%20settembre%20e%206%20ottobre%20dalle%2019:30%20alle%2021:30%20in%20Via%20Montorio%20112.%20Andiamo?"
+                class="umami--click--share-whatsapp"
+                title="Condividi su Whatsapp" target="_blank" rel="noopener"
+              ><i class="fa-brands fa-whatsapp"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
   <!-- //events -->
@@ -300,7 +362,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div class="container">
       <h2 class="heading-agileinfo white">
         Join us
-        <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M385.5 30.38c-18.5.16-40.5 5.02-64.3 14.24C270.4 64.35 211.1 104 156.4 158.7c-54.8 54.7-94.46 114.1-114.12 164.9-9.89 25.4-14.7 48.6-14.28 67.9.43 19 5.8 33.8 16.05 44 10.26 10.3 24.96 15.6 44.06 16.1 19.19.4 42.39-4.4 67.89-14.3 50.8-19.7 110.1-59.4 164.8-114.1 54.7-54.7 94.4-114 114.1-164.9 9.9-25.4 14.7-48.6 14.3-67.79-.5-19.09-5.8-33.8-16.1-44.05-10.3-10.26-25-15.63-44-16.05-1.2-.03-2.4-.04-3.6-.03zm66.6 10.7c9.9 13.36 14.7 30.3 15.1 49.08.5 22.44-5 47.74-15.6 74.64-20.8 54-61.8 114.9-118 171.1-56.3 56.3-117.2 97.2-171.2 118.1-26.9 10.6-52.2 16-74.65 15.6-15.06-.3-28.93-3.5-40.72-9.8.8.9 1.62 1.8 2.47 2.6 25.95 26 72.3 29.4 128.3 10.7 56-18.6 120.3-59.2 178.2-117.2 57.9-57.9 98.5-122.1 117.1-178.1 18.8-56 15.3-102.35-10.7-128.3-3.1-3.14-6.6-5.94-10.3-8.42zM299.7 122.5c7.8 0 15.3 2.3 20.7 7.7 6.7 6.7 8.5 16.4 7.4 26.1-1 9.7-4.7 20.2-10.3 31.6-11.2 22.8-30.4 49-55.5 74.1-25.1 25.1-51.3 44.3-74.1 55.5-11.3 5.6-21.9 9.3-31.6 10.3-9.7 1.1-19.4-.7-26.1-7.4-6.7-6.7-8.5-16.4-7.4-26.1 1-9.7 4.7-20.3 10.3-31.7 11.2-22.8 30.4-48.9 55.5-74s51.3-44.4 74.1-55.6c11.4-5.6 21.9-9.2 31.6-10.2 1.8-.2 3.6-.3 5.4-.3z"/></svg>
+        <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+          <path d="M385.5 30.38c-18.5.16-40.5 5.02-64.3 14.24C270.4 64.35 211.1 104 156.4 158.7c-54.8 54.7-94.46 114.1-114.12 164.9-9.89 25.4-14.7 48.6-14.28 67.9.43 19 5.8 33.8 16.05 44 10.26 10.3 24.96 15.6 44.06 16.1 19.19.4 42.39-4.4 67.89-14.3 50.8-19.7 110.1-59.4 164.8-114.1 54.7-54.7 94.4-114 114.1-164.9 9.9-25.4 14.7-48.6 14.3-67.79-.5-19.09-5.8-33.8-16.1-44.05-10.3-10.26-25-15.63-44-16.05-1.2-.03-2.4-.04-3.6-.03zm66.6 10.7c9.9 13.36 14.7 30.3 15.1 49.08.5 22.44-5 47.74-15.6 74.64-20.8 54-61.8 114.9-118 171.1-56.3 56.3-117.2 97.2-171.2 118.1-26.9 10.6-52.2 16-74.65 15.6-15.06-.3-28.93-3.5-40.72-9.8.8.9 1.62 1.8 2.47 2.6 25.95 26 72.3 29.4 128.3 10.7 56-18.6 120.3-59.2 178.2-117.2 57.9-57.9 98.5-122.1 117.1-178.1 18.8-56 15.3-102.35-10.7-128.3-3.1-3.14-6.6-5.94-10.3-8.42zM299.7 122.5c7.8 0 15.3 2.3 20.7 7.7 6.7 6.7 8.5 16.4 7.4 26.1-1 9.7-4.7 20.2-10.3 31.6-11.2 22.8-30.4 49-55.5 74.1-25.1 25.1-51.3 44.3-74.1 55.5-11.3 5.6-21.9 9.3-31.6 10.3-9.7 1.1-19.4-.7-26.1-7.4-6.7-6.7-8.5-16.4-7.4-26.1 1-9.7 4.7-20.3 10.3-31.7 11.2-22.8 30.4-48.9 55.5-74s51.3-44.4 74.1-55.6c11.4-5.6 21.9-9.2 31.6-10.2 1.8-.2 3.6-.3 5.4-.3z"/>
+        </svg>
       </h2>
       <div class="row justify-content-center">
         <div class="col-sm-12 col-md-6 col-lg-4 about-w3-grids" data-when>
